--- a/nanpin/css/index.css
+++ b/nanpin/css/index.css
@@ -374,7 +374,7 @@ footer img {
 	width: 200px;
 }
 
-footer img:nth-child(2){
+footer img:nth-child(2) {
 	margin-left: 100px;
 }
 
@@ -438,15 +438,15 @@ p.nodata {
 
 .model {
 	width: 84%;
-    height: 70%;
-    border-radius: 5px;
-    background-color: rgba(147, 183, 223, 0.95);
-    position: fixed;
-    top: 150px;
-    left: 150px;
+	height: 70%;
+	border-radius: 5px;
+	background-color: rgba(147, 183, 223, 0.95);
+	position: fixed;
+	top: 150px;
+	left: 150px;
 }
 
-.model table tr td{
+.model table tr td {
 	position: relative;
 }
 
@@ -458,7 +458,7 @@ p.nodata {
 	height: 636px;
 }
 
-.model .delete{
+.model .delete {
 	position: absolute;
 	right: 10px;
 	top: 10px;
@@ -466,22 +466,22 @@ p.nodata {
 	height: 45px;
 }
 
-.model .title{
+.model .title {
 	font-size: 36px;
 	position: absolute;
 	top: 44px;
 }
 
-.model .title span{
+.model .title span {
 	padding-right: 30px;
 }
 
-.model .title small{
+.model .title small {
 	font-size: 24px;
 	display: none;
 }
 
-.model .content{
+.model .content {
 	position: absolute;
 	top: 120px;
 	font-size: 24px;
@@ -491,10 +491,55 @@ p.nodata {
 	overflow-y: auto;
 }
 
-.model .content p{
+.model .content p {
 	margin-bottom: 1em;
 }
 
-.model .content p.footer{
+.model .content p.footer {
 	text-align: right;
+}
+
+.frame {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 999;
+	background-color: #FFFFFF;
+}
+
+.frame>div{
+	position: absolute;
+	width: 100%;
+	top: 0;
+	z-index: 100;
+	height: 1080px;
+}
+
+.frame>div:first-child{
+	z-index: 101;
+	height: 100px;
+	width: 100px;
+	right: 0;
+}
+
+.frame>div>a {
+	position: absolute;
+	right: 20px;
+	top: 20px;
+	width: 50px;
+	height: 50px;
+	z-index: 1000;
+	background-image: url(../img/close.png);
+	display: inline-block;
+	background-size: 50px 50px;
+}
+
+.frame>div>iframe {
+	border: none;
+	width: 100%;
+	height: 1080px;
+	position: absolute;
+	z-index: 100;
 }
